--- a/template.yaml
+++ b/template.yaml
@@ -12,35 +12,13 @@ Parameters:
     Type: String
     Description: The custom domain name for the API
 
-  DatabaseMasterUsername:
+  EncryptionKeyParameter:
     Type: String
-    Description: The master username to set for the Aurora MySQL database
+    Description: The alias for the database key stored in parameter store.
 
-  DatabaseMasterPassword:
+  KmsKeyId:
     Type: String
-    Description: The master password to set for the Aurora MySQL database
-    NoEcho: true
-
-  DatabaseSubnets:
-    Type: List<AWS::EC2::Subnet::Id>
-    Description: Subnets for use by the Aurora MySQL database
-
-  DatabaseSchemaVersion:
-    Type: Number
-    Description: A version value for the database schema to trigger an update
-
-  DropDatabase:
-    Type: Number
-    Description: Drop the existing database (1=True, 0=False).
-      THIS MUST SET BACK TO '0' BETWEEN DEPLOYMENTS!
-    AllowedValues:
-      - 0
-      - 1
-    Default: 0
-
-  LambdaSecurityGroups:
-    Type: List<AWS::EC2::SecurityGroup::Id>
-    Description: Security groups to assign VPC deployed Lambdas
+    Description: ID of the KMS key to decrypt parameter store values.
 
   SlackClientId:
     Type: String
@@ -61,83 +39,6 @@ Resources:
     Properties:
       StageName: Prod
       EndpointConfiguration: EDGE
-
-      DefinitionBody:
-        swagger: 2.0
-        info:
-          title: !Ref AWS::StackName
-        securityDefinitions:
-          apiKey:
-            type: apiKey
-            name: x-api-key
-            in: header
-        paths:
-          "/slack/events":
-            post:
-              x-amazon-apigateway-integration:
-                httpMethod: post
-                type: aws_proxy
-                uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SlackEvents.Arn}/invocations
-              responses: {}
-
-          "/slack/install":
-            get:
-              x-amazon-apigateway-integration:
-                httpMethod: post
-                type: aws_proxy
-                uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SlackInstall.Arn}/invocations
-              responses: {}
-
-          "/slack/oauth/redirect":
-            get:
-              x-amazon-apigateway-integration:
-                httpMethod: post
-                type: aws_proxy
-                uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SlackOAuthRedirect.Arn}/invocations
-              responses: {}
-
-          "/dev/database":
-            get:
-              x-amazon-apigateway-integration:
-                httpMethod: post
-                type: aws_proxy
-                uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DevDatabase.Arn}/invocations
-              responses: {}
-              security:
-                - apiKey: []
-
-  ApiKey:
-    Type: AWS::ApiGateway::ApiKey
-    DependsOn:
-      - ApiGateway
-      - ApiGatewayProdStage
-    Properties:
-      Description: Key restricts access to API endpoints.
-      Enabled: true
-      StageKeys:
-        - RestApiId: !Ref ApiGateway
-          StageName: Prod
-
-  ApiUsagePlan:
-    Type: AWS::ApiGateway::UsagePlan
-    DependsOn:
-      - ApiGateway
-      - ApiGatewayProdStage
-    Properties:
-      ApiStages:
-        - ApiId: !Ref ApiGateway
-          Stage: Prod
-
-  ApiUsagePlanKey:
-    Type: AWS::ApiGateway::UsagePlanKey
-    Properties:
-      KeyId: !Ref ApiKey
-      KeyType: API_KEY
-      UsagePlanId: !Ref ApiUsagePlan
 
   ApiCustomDomain:
     Type: AWS::ApiGateway::DomainName
@@ -166,86 +67,38 @@ Resources:
 
 # Database
 
-  Database:
-    Type: AWS::RDS::DBCluster
+  TeamsTable:
+    Type: AWS::Serverless::SimpleTable
     Properties:
-      Engine: aurora
-      EngineMode: serverless
-      DatabaseName: jackalope
-      DBSubnetGroupName: !Ref DatabaseSubnetGroup
-      StorageEncrypted: true
-      ScalingConfiguration:
-        MinCapacity: 2
-        MaxCapacity: 4
-        AutoPause: true
-        SecondsUntilAutoPause: 300
-      MasterUsername: !Ref DatabaseMasterUsername
-      MasterUserPassword: !Ref DatabaseMasterPassword
+      PrimaryKey:
+        Name: team_id
+        Type: String
+      ProvisionedThroughput:
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      SSESpecification:
+        SSEEnabled: true
 
-  DatabaseSubnetGroup:
-    Type: AWS::RDS::DBSubnetGroup
+  ChannelsTable:
+    Type: AWS::DynamoDB::Table
     Properties:
-      DBSubnetGroupDescription: "Subnet Group for the Database"
-      DBSubnetGroupName: !Sub '${AWS::StackName}-db-sg'
-      SubnetIds: !Ref DatabaseSubnets
+      AttributeDefinitions:
+        - AttributeName: team_id
+          AttributeType: S
+        - AttributeName: channel_id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: team_id
+          KeyType: HASH
+        - AttributeName: channel_id
+          KeyType: RANGE
+      ProvisionedThroughput:
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      SSESpecification:
+        SSEEnabled: true
 
-# Database Initialization
-
-  DatabaseInitializer:
-    Type: AWS::Serverless::Function
-    Properties:
-      Runtime: python3.6
-      CodeUri: ./src/cloudformation/database_initializer
-      Handler: database_initializer.lambda_handler
-      Timeout: 30
-      VpcConfig:
-        SecurityGroupIds: !Ref LambdaSecurityGroups
-        SubnetIds: !Ref DatabaseSubnets
-      Environment:
-        Variables:
-          DATABASE_ENDPOINT: !GetAtt Database.Endpoint.Address
-          DATABASE_PORT: !GetAtt Database.Endpoint.Port
-          DATABASE_USERNAME: !Ref DatabaseMasterUsername
-          DATABASE_PASSWORD: !Ref DatabaseMasterPassword
-          DROP_DATABASE: !Ref DropDatabase
-      Policies:
-        Statement:
-          - Effect: Allow
-            Action:
-              - ec2:DescribeNetworkInterfaces
-              - ec2:CreateNetworkInterface
-              - ec2:DeleteNetworkInterface
-            Resource: '*'
-
-  DatabaseInitializerResource:
-    Type: Custom::DatabaseInitializer
-    Properties:
-      ServiceToken: !GetAtt DatabaseInitializer.Arn
-      DatabaseSchemaVersion: !Ref DatabaseSchemaVersion
-
-# API Lambda Functions
-
-  SlackEventsApi:
-    Type: AWS::Serverless::Function
-    Properties:
-      Runtime: python3.6
-      CodeUri: ./src/functions/events/api
-      Handler: api.lambda_handler
-      Environment:
-        Variables:
-          EVENTS_TOPIC: !Ref EventsTopic
-      Policies:
-        Statement:
-          - Effect: Allow
-            Action: sns:Publish
-            Resource: !Ref EventsTopic
-      Events:
-        SlackEvents:
-          Type: Api
-          Properties:
-            Path: /slack/events
-            Method: post
-            RestApiId: !Ref ApiGateway
+# Slack Install Lambda Functions
 
   SlackInstall:
     Type: AWS::Serverless::Function
@@ -272,32 +125,78 @@ Resources:
       CodeUri: ./src/functions/oauth_redirect
       Handler: oauth_redirect.lambda_handler
       Timeout: 30
-      VpcConfig:
-        SecurityGroupIds: !Ref LambdaSecurityGroups
-        SubnetIds: !Ref DatabaseSubnets
       Environment:
         Variables:
           DOMAIN_NAME: !Ref DomainName
           CLIENT_ID: !Ref SlackClientId
           CLIENT_SECRET: !Ref SlackClientSecret
-          DATABASE_ENDPOINT: !GetAtt Database.Endpoint.Address
-          DATABASE_PORT: !GetAtt Database.Endpoint.Port
-          DATABASE_USERNAME: !Ref DatabaseMasterUsername
-          DATABASE_PASSWORD: !Ref DatabaseMasterPassword
+          ENC_KEY_PARAM: !Ref EncryptionKeyParameter
+          TEAMS_TABLE: !Ref TeamsTable
       Policies:
         Statement:
           - Effect: Allow
             Action:
-              - ec2:DescribeNetworkInterfaces
-              - ec2:CreateNetworkInterface
-              - ec2:DeleteNetworkInterface
-            Resource: '*'
+              - dynamodb:PutItem
+              - dynamodb:UpdateItem
+            Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TeamsTable}'
+          - Effect: Allow
+            Action: ssm:GetParameter*
+            Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/jackalope*'
+          - Effect: Allow
+            Action: kms:Decrypt
+            Resource: !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
       Events:
         SlackOAuthRedirect:
           Type: Api
           Properties:
             Path: /slack/oauth/redirect
             Method: get
+            RestApiId: !Ref ApiGateway
+
+# API Lambda Functions
+
+  SlackEventsApi:
+    Type: AWS::Serverless::Function
+    Properties:
+      Runtime: python3.6
+      CodeUri: ./src/functions/events/api
+      Handler: api.lambda_handler
+      Environment:
+        Variables:
+          EVENTS_TOPIC: !Ref EventsTopic
+      Policies:
+        Statement:
+          - Effect: Allow
+            Action: sns:Publish
+            Resource: !Ref EventsTopic
+      Events:
+        SlackEvents:
+          Type: Api
+          Properties:
+            Path: /slack/events
+            Method: post
+            RestApiId: !Ref ApiGateway
+
+  SlackInteractionApi:
+    Type: AWS::Serverless::Function
+    Properties:
+      Runtime: python3.6
+      CodeUri: ./src/functions/interaction/api
+      Handler: api.lambda_handler
+      Environment:
+        Variables:
+          EVENTS_TOPIC: !Ref EventsTopic
+      Policies:
+        Statement:
+          - Effect: Allow
+            Action: sns:Publish
+            Resource: !Ref EventsTopic
+      Events:
+        SlackInteraction:
+          Type: Api
+          Properties:
+            Path: /slack/interaction
+            Method: post
             RestApiId: !Ref ApiGateway
 
 # Event Processing Lambda Functions
@@ -309,59 +208,20 @@ Resources:
       CodeUri: ./src/functions/events/user_events
       Handler: user_events.lambda_handler
       Timeout: 30
-      VpcConfig:
-        SecurityGroupIds: !Ref LambdaSecurityGroups
-        SubnetIds: !Ref DatabaseSubnets
       Environment:
         Variables:
-          DATABASE_ENDPOINT: !GetAtt Database.Endpoint.Address
-          DATABASE_PORT: !GetAtt Database.Endpoint.Port
-          DATABASE_USERNAME: !Ref DatabaseMasterUsername
-          DATABASE_PASSWORD: !Ref DatabaseMasterPassword
+          TEAMS_TABLE: !Ref TeamsTable
+          CHANNELS_TABLE: !Ref ChannelsTable
       Policies:
         Statement:
-        - Effect: Allow
-          Action:
-          - ec2:DescribeNetworkInterfaces
-          - ec2:CreateNetworkInterface
-          - ec2:DeleteNetworkInterface
-          Resource: '*'
+          - Effect: Allow
+            Action: dynamodb:GetItem
+            Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TeamsTable}'
+          - Effect: Allow
+            Action: dynamodb:PutItem
+            Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ChannelsTable}'
       Events:
         SnsTopic:
           Type: SNS
           Properties:
             Topic: !Ref EventsTopic
-
-# Dev Testing Functions
-
-  DevDatabase:
-    Type: AWS::Serverless::Function
-    Properties:
-      Runtime: python3.6
-      CodeUri: ./src/functions/dev/database
-      Handler: dev_database.lambda_handler
-      Timeout: 30
-      VpcConfig:
-        SecurityGroupIds: !Ref LambdaSecurityGroups
-        SubnetIds: !Ref DatabaseSubnets
-      Environment:
-        Variables:
-          DATABASE_ENDPOINT: !GetAtt Database.Endpoint.Address
-          DATABASE_PORT: !GetAtt Database.Endpoint.Port
-          DATABASE_USERNAME: !Ref DatabaseMasterUsername
-          DATABASE_PASSWORD: !Ref DatabaseMasterPassword
-      Policies:
-        Statement:
-          - Effect: Allow
-            Action:
-              - ec2:DescribeNetworkInterfaces
-              - ec2:CreateNetworkInterface
-              - ec2:DeleteNetworkInterface
-            Resource: '*'
-      Events:
-        SlackOAuthRedirect:
-          Type: Api
-          Properties:
-            Path: /dev/database
-            Method: get
-            RestApiId: !Ref ApiGateway
