--- a/template.yaml
+++ b/template.yaml
@@ -181,9 +181,16 @@ Resources:
       Environment:
         Variables:
           CHANNEL_EVENTS_TOPIC: !Ref ChannelEventsTopic
+          SIGNING_SECRET_PARAM: !Ref SlackSigningSecretParameter
           USER_EVENTS_TOPIC: !Ref UserEventsTopic
       Policies:
         Statement:
+          - Effect: Allow
+            Action: ssm:GetParameter*
+            Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/jackalope*'
+          - Effect: Allow
+            Action: kms:Decrypt
+            Resource: !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
           - Effect: Allow
             Action: sns:Publish
             Resource:
@@ -207,19 +214,25 @@ Resources:
       Environment:
         Variables:
           CHANNELS_TABLE: !Ref ChannelsTable
-          SIGNING_SECRET_PARAM: !Ref SlackSigningSecretParameter
+          ENC_KEY_PARAM: !Ref EncryptionKeyParameter
           TEAMS_TABLE: !Ref TeamsTable
       Policies:
         Statement:
-        - Effect: Allow
-          Action: dynamodb:GetItem
-          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TeamsTable}'
-        - Effect: Allow
-          Action:
-            - dynamodb:GetItem
-            - dynamodb:Query
-            - dynamodb:PutItem
-          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ChannelsTable}'
+          - Effect: Allow
+            Action: ssm:GetParameter*
+            Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/jackalope*'
+          - Effect: Allow
+            Action: kms:Decrypt
+            Resource: !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
+          - Effect: Allow
+            Action: dynamodb:GetItem
+            Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TeamsTable}'
+          - Effect: Allow
+            Action:
+              - dynamodb:GetItem
+              - dynamodb:Query
+              - dynamodb:PutItem
+            Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ChannelsTable}'
       Events:
         SnsTopic:
           Type: SNS
